syntax = "proto3";

option go_package = "./proto";

service OrderService {
    rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
    rpc GetOrder(GetOrderRequest) returns (Order);
}

message GetOrdersRequest {
    int64 UserID = 1;
}

message GetOrderRequest {
    int64 UserID = 1;
    int64 OrderID = 2;
}

message Order {
    int64 order_id = 1;
    int64 product_id = 2;
    string customer_name = 3;
    string brand_name = 4;
    string category_name = 5;
    string color = 6;
    string size = 7;
    int64 quantity = 8;
    string description = 9;
    float revenue = 10;
    float cost = 11;
    float profit = 12;
    bool has_reviewed = 13;
    string created_at = 14;
}

message GetOrdersResponse {
    repeated Order orders = 1;
}